[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/endscreen_collect.gd" type="Script" id=1]
[ext_resource path="res://import/2d/speedrun_endscreen/bg_scroll.png" type="Texture" id=2]
[ext_resource path="res://import/2d/text_sprites/speedrun_end_screen/go_main_menu-hover.png" type="Texture" id=3]
[ext_resource path="res://import/2d/text_sprites/speedrun_end_screen/go_main_menu.png" type="Texture" id=4]
[ext_resource path="res://import/2d/text_sprites/speedrun_end_screen/try_again-hover.png" type="Texture" id=5]
[ext_resource path="res://import/2d/text_sprites/speedrun_end_screen/congratulations.png" type="Texture" id=6]
[ext_resource path="res://import/2d/text_sprites/speedrun_end_screen/next-hover.png" type="Texture" id=7]
[ext_resource path="res://import/2d/text_sprites/speedrun_end_screen/next.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/syne_mono_font.tres" type="DynamicFont" id=9]
[ext_resource path="res://import/2d/text_sprites/speedrun_end_screen/try_again.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Show"
tracks/0/type = "bezier"
tracks/0/path = NodePath("panel:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.745098, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("margin:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -600, -0.25, 0, 0.25, 0, 50, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("bg_scroll:rect_position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -525, -0.25, 0, 0.25, 0, 125, -0.25, 0, 0.25, 0, 75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="end_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_scroll" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -825.0
margin_right = 425.0
margin_bottom = -374.999
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -600.0
margin_bottom = -600.0
mouse_filter = 2
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 100
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="Control" parent="margin"]
margin_left = 100.0
margin_top = 50.0
margin_right = 924.0
margin_bottom = 550.0
mouse_filter = 2

[node name="congratulations" type="TextureRect" parent="margin/container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -210.0
margin_right = 210.0
margin_bottom = 52.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="margin/container"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 150
custom_constants/margin_top = 120
custom_constants/margin_left = 150
custom_constants/margin_bottom = 120
__meta__ = {
"_edit_use_anchors_": false
}

[node name="results" type="VBoxContainer" parent="margin/container/margin"]
margin_left = 150.0
margin_top = 120.0
margin_right = 674.0
margin_bottom = 380.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="level" type="HBoxContainer" parent="margin/container/margin/results"]
margin_right = 524.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="level_Label" type="Label" parent="margin/container/margin/results/level"]
margin_right = 108.0
margin_bottom = 39.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 0.392157 )
text = "Level:"
align = 1

[node name="level_value_label" type="Label" parent="margin/container/margin/results/level"]
margin_left = 112.0
margin_right = 112.0
margin_bottom = 39.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="HSeparator2" type="HSeparator" parent="margin/container/margin/results"]
modulate = Color( 0, 0, 0, 0.0980392 )
margin_top = 39.0
margin_right = 524.0
margin_bottom = 59.0
custom_constants/separation = 20

[node name="time" type="HBoxContainer" parent="margin/container/margin/results"]
margin_top = 59.0
margin_right = 524.0
margin_bottom = 98.0
size_flags_horizontal = 3

[node name="time_label" type="Label" parent="margin/container/margin/results/time"]
margin_right = 90.0
margin_bottom = 39.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 0.392157 )
text = "Time:"
align = 1

[node name="time_value_label" type="Label" parent="margin/container/margin/results/time"]
margin_left = 94.0
margin_right = 94.0
margin_bottom = 39.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="action_buttons" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
size_flags_horizontal = 3
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="try_again_button" type="TextureButton" parent="action_buttons" groups=[
"regular_button",
]]
margin_left = 20.0
margin_top = 9.0
margin_right = 374.0
margin_bottom = 90.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_button" type="TextureButton" parent="action_buttons" groups=[
"regular_button",
]]
margin_left = 474.0
margin_top = 17.0
margin_right = 640.0
margin_bottom = 83.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="Button_Quit_Main_Menu" type="TextureButton" parent="action_buttons" groups=[
"regular_button",
]]
margin_left = 740.0
margin_top = 34.0
margin_right = 1004.0
margin_bottom = 65.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Show = SubResource( 1 )
[connection signal="pressed" from="action_buttons/try_again_button" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="action_buttons/next_button" to="." method="_on_Button_Next_pressed"]
[connection signal="pressed" from="action_buttons/Button_Quit_Main_Menu" to="." method="_on_Button_Quit_Main_Menu_pressed"]
